# Pricing-App

./: .gitignore  .npmrc  Cargo.toml  Changelog.md  README.md  build.bat  deploy.js  forge.config.js  index.html  index.js  package-lock.json  package.json  pnpm-lock.yaml  pricing-db.service  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: rust.yml
bruno-collection/: Delete Record.bru  Get Icons.bru  bruno.json  collection.bru
bruno-collection/Inventory/: Add Record.bru  Edit Record.bru  Get Inventory.bru  Get Record.bru
bruno-collection/Inventory/Columns/: Get Columns.bru  Update Column Names.bru
bruno-collection/Inventory/Options/: Create Option.bru  Get Options.bru
bruno-collection/List/: Create New Location.bru  Delete Location.bru  Get All Locations.bru  Get Location.bru  Update Location.bru
bruno-collection/SpreadSheets/: Prepare Sheet.bru
frontend/: index.html
frontend/assets/css/: inputs.css  list.css  nav.css  scrollbar.css
frontend/assets/js/: database-list.js  element-label.js  element-list.js
installer/: manager.js
scripts/: app.js  dev.js
src/: index.html  main.tsx
src-actix/: all_databases.rs  all_databases_endpoint.rs  asset_endpoint.rs  build.rs  constants.rs  data_database_connection.rs  http_error.rs  icons_endpoint.rs  lib.rs  main.rs  mysql_row_wrapper.rs  server_information_endpoint.rs  singular_database.rs
src-actix/crypto/: Cargo.toml
src-actix/crypto/src/: hashids.rs  salt.rs
src-actix/excel/: csv.rs  excel.rs  spreadsheet_endpoint.rs
src-actix/inventory/: inventory_db.rs  inventory_endpoint.rs
src-actix/inventory/columns/: columns_data.rs  columns_db.rs  columns_endpoint.rs
src-actix/inventory/options/: options_data.rs  options_db.rs  options_endpoint.rs
src-actix/inventory/options/print_options/: print_options_data.rs  print_options_db.rs
src-actix/list/: list_data.rs  list_db.rs  list_endpoint.rs
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  options_utility.rs  print_manager.rs  updater.rs
src/assets/components/: AlertModal.tsx  AuthProvider.tsx  Navigation.tsx  ThemeSwitcher.tsx
src/assets/components/Extends/: AutoPrintButton.tsx  ExpandableButton.tsx  ExtendedSwitch.tsx
src/assets/components/LoginModal/: LoginForm.tsx  LoginModal.tsx  RegisterForm.tsx
src/assets/components/Modals/: NewRecordModal.tsx
src/assets/components/Navigation/: BrandComponent.tsx  GlobalActionsComponent.tsx  GlobalSearchComponent.tsx  VoiceSearch.tsx
src/assets/components/Options/: AllowInventorying.tsx  CanPrintLabel.tsx  ColumnAttributes.tsx  ColumnItem.tsx  ColumnsList.tsx  FileUploadInput.tsx  IconList.tsx
src/assets/components/View/: InventoryTable.tsx  InventoryingForm.tsx  PrintLabelExtraOptions.tsx
src/assets/css/: database-options-form.css  import-filemaker.css  inputs.css  inventory-form.css  lightmode.css  list.css  main.css  nav.css  popups.css  responsive.css  scrollbar.css
src/assets/html/: database-options-form.html  import-filemaker-form.html
src/assets/images/: Logo.svg.tsx
src/assets/js/: CONSTANTS.js  authentication.js  column-mapping.js  crossplatform-utility.js  database-inventorying-with-quantity.js  database-inventorying.js  database-list.js  database-options-manager.js  directory-list.js  element-dropdown.js  element-label.js  fake.js  filesystem.js  history.js  import-filemaker.js  inputs.js  loading.js  location.js  page-navigation.js  page-navigation.min.js  popups.js  settings.js  updater.js  voice-search.js
src/assets/layouts/: simple-inventory-list.html  static-list.html
src/assets/pages/: DatabaseList.tsx  DatabaseListPage.tsx  DatabaseOptionsPage.tsx  DatabaseViewPage.tsx
src/assets/popups/: column-mapping.html  history.html  login.html
src/assets/providers/: DatabaseViewProvider.tsx  NewRecordModalProvider.tsx  SearchProvider.tsx  ToastProvider.tsx
src/assets/scss/: index.scss  inputs.scss
src/assets/ts/: DatabaseItem.ts  DatabaseList.ts  DatabaseManagement.ts  DatabaseRecords.ts  FileSystem.ts  authentication.ts  icons.ts  object-utilities.ts  printer.ts  server_information.ts
tests/: icons.rs  list.rs  server_information.rs  spreadsheets.rs
tests/assets/: spreadsheets.csv  spreadsheets.xlsx
tools/: column_mapping_migration_tool.rs  options_migration_tool.rs  table_name_migration_tool.rs
(+7 files in other folders)
