[package]
name = "pricing_app"
version = "1.0.0"
edition = "2021"
build = "src-actix/build.rs"

[[bin]]
name = "pricing-app"
path = "src-actix/main.rs"

[lib]
name = "pricing_app"
path = "src-actix/main.rs"
crate-type = ["lib"]

[[example]]
name = "column_mapping_migration_tool"
path = "tools/column_mapping_migration_tool.rs"

[[example]]
name = "table_name_migration_tool"
path = "tools/table_name_migration_tool.rs"


[dependencies]
actix-web = { version = "4.9.0" }
actix-files = "0.6.6"
futures-util = "0.3.30"
serde = { version = "1.0.208", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.125" }
env_logger = "0.11.5"
include_dir = "0.7.4"
awc = "3.1.0"
log = "0.4.22"
sqlx = { version = "0.8.2", features = ["default", "mysql", "derive", "chrono", "runtime-tokio", "time", "runtime-tokio-rustls"] }
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
crypto = { path = "./src-actix/crypto" }
futures = "0.3.31"
serde_urlencoded = "0.7.1"
csv = { version = "1.3.1" }
serde_derive = "1.0.210"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }