[package]
name = "pricing_app"
version = "1.0.0"
edition = "2021"
build = "src-actix/build.rs"

[[bin]]
name = "pricing_app"
path = "src-actix/main.rs"

[lib]
name = "pricing_app_lib"
path = "src-actix/lib.rs"
crate-type = ["lib"]

[[example]]
name = "column_mapping_migration_tool"
path = "tools/column_mapping_migration_tool.rs"

[[example]]
name = "table_name_migration_tool"
path = "tools/table_name_migration_tool.rs"

[[example]]
name = "options_migration_tool"
path = "tools/options_migration_tool.rs"


[dependencies]
actix-web = { version = "4.9.0" }
actix-files = "0.6.6"
serde = { version = "1.0.208", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.125" }
env_logger = "0.11.5"
include_dir = "0.7.4"
log = "0.4.22"
sqlx = { version = "0.8.2", features = ["default", "mysql", "derive", "chrono", "runtime-tokio", "time", "runtime-tokio-rustls", "sqlx-mysql"] }
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
crypto = { path = "./src-actix/crypto" }
futures = "0.3.31"
serde_urlencoded = "0.7.1"
csv = { version = "1.3.1" }
calamine = { version = "0.26.1", features = ["default", "chrono", "dates"] }
serde_derive = "1.0.210"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.95"
thiserror = "2.0.11"
vite-actix = { git = "https://github.com/Drew-Chase/vite-actix.git" }
regex = { version = "1.11.1", features = ["logging"] }
uuid = { version = "1.13.1", features = ["fast-rng", "serde", "v4"] }


[dev-dependencies]
urlencoding = "2.1.2"
